--- a/custom_addons/tax_rate_table/views/tax_rate_views.xml
+++ b/custom_addons/tax_rate_table/views/tax_rate_views.xml
@@ -2,6 +2,7 @@
     <record id="view_tax_rate_table_form" model="ir.ui.view">
         <field name="name">tax.rate.table.form</field>
         <field name="model">tax.rate.table</field>
+	<field name="type">tree</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
