--- a/custom_addons/tax_rate_table/views/tax_rate_views.xml
+++ b/custom_addons/tax_rate_table/views/tax_rate_views.xml
@@ -23,7 +23,7 @@
     <record id="view_tax_rate_table_tree" model="ir.ui.view">
         <field name="name">tax.rate.table.tree</field>
         <field name="model">tax.rate.table</field>
-        <field name="type">tree</field> <!-- Correct type for tree view -->
+        <field name="type">list</field> <!-- Correct type for tree view -->
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
