--- a/custom_addons/tax_rate_table/views/tax_rate_views.xml
+++ b/custom_addons/tax_rate_table/views/tax_rate_views.xml
@@ -3,7 +3,6 @@
     <record id="view_tax_rate_table_form" model="ir.ui.view">
         <field name="name">tax.rate.table.form</field>
         <field name="model">tax.rate.table</field>
-        <field name="type">form</field>  <!-- Correct type for form view -->
         <field name="arch" type="xml">
             <form>
                 <sheet>
@@ -23,15 +22,14 @@
     <record id="view_tax_rate_table_tree" model="ir.ui.view">
         <field name="name">tax.rate.table.tree</field>
         <field name="model">tax.rate.table</field>
-        <field name="type">list</field>
         <field name="arch" type="xml">
-            <list>
+            <tree>
                 <field name="name"/>
                 <field name="date"/>
                 <field name="base_unit"/>
                 <field name="tax_rate"/>
                 <field name="currency_id"/>
-            </list>
+            </tree>
         </field>
     </record>
 
