--- a/custom_addons/tax_rate_table/views/tax_rate_views.xml
+++ b/custom_addons/tax_rate_table/views/tax_rate_views.xml
@@ -3,7 +3,7 @@
     <record id="view_tax_rate_table_form" model="ir.ui.view">
         <field name="name">tax.rate.table.form</field>
         <field name="model">tax.rate.table</field>
-        <field name="type">form</field> <!-- ✅ Added -->
+        <field name="type">form</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
@@ -23,7 +23,7 @@
     <record id="view_tax_rate_table_tree" model="ir.ui.view">
         <field name="name">tax.rate.table.tree</field>
         <field name="model">tax.rate.table</field>
-        <field name="type">tree</field> <!-- ✅ Fixed: was missing -->
+        <field name="type">tree</field> <!-- ✅ This must be 'tree' -->
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
