--- a/custom_addons/tax_rate_table/views/tax_rate_views.xml
+++ b/custom_addons/tax_rate_table/views/tax_rate_views.xml
@@ -19,11 +19,11 @@
         </field>
     </record>
 
-    <!-- Tree View -->
+    <!-- List View (was Tree View) -->
     <record id="view_tax_rate_table_tree" model="ir.ui.view">
         <field name="name">tax.rate.table.tree</field>
         <field name="model">tax.rate.table</field>
-        <field name="type">tree</field> <!-- ✅ This must be 'tree' -->
+        <field name="type">list</field> <!-- ✅ FIXED -->
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
