--- a/custom_addons/tax_rate_table/views/purchase_order_view.xml
+++ b/custom_addons/tax_rate_table/views/purchase_order_view.xml
@@ -1,5 +1,5 @@
-<!-- views/purchase_order_view.xml -->
 <odoo>
+    <!-- Add custom tax rate to PO header -->
     <record id="purchase_order_form_inherit_tax_rate" model="ir.ui.view">
         <field name="name">purchase.order.form.inherit.tax.rate</field>
         <field name="model">purchase.order</field>
@@ -7,6 +7,20 @@
         <field name="arch" type="xml">
             <xpath expr="//sheet/group" position="inside">
                 <field name="custom_tax_rate" readonly="1"/>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- Add USD fields to order lines -->
+    <record id="purchase_order_line_inherit_usd_fields" model="ir.ui.view">
+        <field name="name">purchase.order.line.inherit.usd.fields</field>
+        <field name="model">purchase.order</field>
+        <field name="inherit_id" ref="purchase.purchase_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
+                <field name="custom_price_usd"/>
+                <field name="custom_tax_usd"/>
+                <field name="custom_total_usd"/>
             </xpath>
         </field>
     </record>
