--- a/custom_addons/tax_rate_table/views/sale_order_view.xml
+++ b/custom_addons/tax_rate_table/views/sale_order_view.xml
@@ -1,13 +1,13 @@
 <odoo>
-    <record id="view_order_form_inherit_tax_rate" model="ir.ui.view">
-        <field name="name">sale.order.form.inherit.tax.rate</field>
+    <record id="sale_order_line_inherit_usd_fields" model="ir.ui.view">
+        <field name="name">sale.order.line.inherit.usd.fields</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet/notebook/page[@name='order_lines']" position="before">
-                <group string="Tax Information">
-                    <field name="custom_tax_rate" readonly="1"/>
-                </group>
+            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
+                <field name="custom_price_usd"/>
+                <field name="custom_tax_usd"/>
+                <field name="custom_total_usd"/>
             </xpath>
         </field>
     </record>
