--- a/custom_addons/tax_rate_table/views/sale_order_view.xml
+++ b/custom_addons/tax_rate_table/views/sale_order_view.xml
@@ -1,8 +1,7 @@
 <odoo>
-    <!-- Inherit the tree view of sale.order.line -->
-    <record id="sale_order_line_tree_inherit_usd_fields" model="ir.ui.view">
-        <field name="name">sale.order.line.tree.inherit.usd.fields</field>
-        <field name="model">sale.order.line</field>
+    <record id="sale_order_form_inherit_usd_fields" model="ir.ui.view">
+        <field name="name">sale.order.form.inherit.usd.fields</field>
+        <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
