fix: adjusted sale order, order line, and view

--- a/custom_addons/tax_rate_table/views/sale_order_view.xml
+++ b/custom_addons/tax_rate_table/views/sale_order_view.xml
@@ -1,10 +1,11 @@
 <odoo>
-    <record id="sale_order_line_tree_inherit_usd_fields" model="ir.ui.view">
-        <field name="name">sale.order.line.tree.inherit.usd.fields</field>
-        <field name="model">sale.order.line</field>
-        <field name="inherit_id" ref="sale.view_order_line_tree"/>
+    <record id="view_order_form_inherit_tax_usd" model="ir.ui.view">
+        <field name="name">sale.order.form.inherit.tax.usd</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//tree" position="inside">
+            <!-- Add USD tax fields inside order_line tree -->
+            <xpath expr="//field[@name='order_line']/tree" position="inside">
                 <field name="custom_price_usd"/>
                 <field name="custom_tax_usd"/>
                 <field name="custom_total_usd"/>
