--- a/custom_addons/tax_rate_table/views/purchase_order_view.xml
+++ b/custom_addons/tax_rate_table/views/purchase_order_view.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- ✅ Inherit Purchase Order Form to add custom tax rate on header -->
     <record id="purchase_order_form_inherit_tax_rate" model="ir.ui.view">
@@ -15,7 +16,7 @@
     <record id="purchase_order_line_form_inherit_usd_fields" model="ir.ui.view">
         <field name="name">purchase.order.line.form.inherit.usd.fields</field>
         <field name="model">purchase.order.line</field>
-        <field name="inherit_id" ref="purchase.view_purchase_order_line_form"/>
+        <field name="inherit_id" ref="purchase.purchase_order_line_form"/> <!-- ✅ Corrected External ID -->
         <field name="arch" type="xml">
             <xpath expr="//field[@name='price_unit']" position="after">
                 <field name="custom_price_usd"/>
