Fix: adjusted and updated modules

--- a/custom_addons/tax_rate_table/views/purchase_order_view.xml
+++ b/custom_addons/tax_rate_table/views/purchase_order_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- ✅ Inherit Purchase Order Form to add custom tax rate on header -->
+    <!-- ✅ Inherit Purchase Order FORM to show custom tax rate at header -->
     <record id="purchase_order_form_inherit_tax_rate" model="ir.ui.view">
         <field name="name">purchase.order.form.inherit.tax.rate</field>
         <field name="model">purchase.order</field>
@@ -8,20 +8,6 @@
         <field name="arch" type="xml">
             <xpath expr="//sheet/group" position="inside">
                 <field name="custom_tax_rate" readonly="1"/>
-            </xpath>
-        </field>
-    </record>
-
-    <!-- ✅ Inherit Purchase Order Line FORM view to show USD fields -->
-    <record id="purchase_order_line_form_inherit_usd_fields" model="ir.ui.view">
-        <field name="name">purchase.order.line.form.inherit.usd.fields</field>
-        <field name="model">purchase.order.line</field>
-        <field name="inherit_id" ref="purchase.purchase_order_line_form"/> <!-- ✅ Corrected External ID -->
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='price_unit']" position="after">
-                <field name="custom_price_usd"/>
-                <field name="custom_tax_usd"/>
-                <field name="custom_total_usd"/>
             </xpath>
         </field>
     </record>
